--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "load-google-maps-api": "^1.3.2",
     "promise-filter": "^1.1.0",
     "react": "^16.8.4",
